--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework:spring-webflux'
     testImplementation 'org.springframework.graphql:spring-graphql-test'
+    implementation 'com.graphql-java-kickstart:graphql-spring-boot-starter:14.0.0'
 }
 
 tasks.named('test') {
